--- a/AnnaK-React-Portfolio/src/App.css
+++ b/AnnaK-React-Portfolio/src/App.css
@@ -1,8 +1,8 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
+  max-width: 100%;
+  min-height: 100%;
+  margin: 0;
   padding: 0;
-
 
   /* CSS variables */
   --dark-blue: #07131e;
@@ -12,14 +12,15 @@
   --italic: italic;
 }
 
+
 /* CSS for body */
+html,
 body {
   background-color: var(--dark-blue);
   margin: 0;
   padding: 0;
- height: 100%;
+  height: 100%;
 }
-
 
 
 /* CSS for Header.jsx */
@@ -27,14 +28,12 @@ header {
   font-family: var(--cambria);
   color: var(--aqua);
   background-color: var(--dark-blue);
-  padding: 30px;
-  margin-top: 20px;
-  margin-bottom: 10px;
- position: relative;
- 
+  padding: 20px;
+  /*margin-top: 20px;
+  margin-bottom: 10px;*/
+  position: relative;
   width: 100%;
-
-
+  box-sizing: border-box;
 }
 
 .header h2 {
@@ -46,11 +45,10 @@ header {
 
 .header nav {
   padding-top: 15px;
-  margin-right: 90px;
+  margin-right: 0;
   float: right;
   font-family: var(--cambria);
   font-size: 17px;
-
 }
 
 .header nav ul {
@@ -67,11 +65,8 @@ a {
   text-decoration: none;
 }
 
-
-
 .photo {
   width: 200px;
-
 }
 
 .nav-link a {
@@ -79,7 +74,7 @@ a {
 }
 
 .nav-link a:hover {
-  color: var(--aqua);
+  color: var(--white);
 }
 
 /* CSS for Projects*/
@@ -91,19 +86,21 @@ a {
   text-align: center;
   box-shadow: 0 4px 8px var(--aqua);
   position: relative;
-  background-color: var();
+  background-color: var(--dark-blue);
+  color: var(--aqua);
 }
 
 .project-title {
   margin-bottom: 10px;
+  margin-top: 20px;
   font-size: 1.5em;
-  color: var(--dark-blue);
+  color: var(--aqua);
   text-decoration: none;
   font-family: var(--cambria);
 }
 
 .project-title:hover {
-  color: var(--aqua);
+  color: var(--white);
 }
 
 .project-image {
@@ -115,14 +112,15 @@ a {
 
 .repo-link {
   position: absolute;
-  top: 30px;
+  top: 40px;
   right: 15px;
-  color: var(--dark-blue);
+  color: var(--aqua);
   text-decoration: none;
+  margin-right: 10px;
 }
 
 .repo-link:hover {
-  color: var(--aqua);
+  color: var(--white);
 }
 
 .portfolio {
@@ -138,21 +136,22 @@ a {
   color: var(--aqua);
   font: var(--cambria);
   text-align: left;
-  margin-left: 50px;
+  margin-left: 0;
   min-width: 320px;
-
 }
 
 /* CSS for Footer.jsx */
 footer {
   background-color: var(--aqua);
-
+  width: 100%;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 20px;
 }
 
 .container ul li a {
   color: var(--dark-blue);
 }
-
 
 @keyframes logo-spin {
   from {
